--- a/Catrina/src/mx/itson/catrina/ui/Estado.form
+++ b/Catrina/src/mx/itson/catrina/ui/Estado.form
@@ -146,7 +146,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tblPedido">
+        <Component class="javax.swing.JTable" name="tblPeriodo">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="1" rowCount="0">
